# Pack-Men

./: .env.example  .gitignore  .railwayignore  Anchor.toml  ENV_SETUP.md  LICENSE  PLANT_GROWTH_ARCHITECTURE.md  README.md  convert-key.mjs  extract_idl.mjs  generate_idl.js  generate_idl.mjs  generate_idl_from_ts.mjs  generate_idl_json.mjs  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  test-connection.sh  tsconfig.json  vite.config.ts
.cursor/rules/: aolana-mcp-guidline.mdc  authority.mdc  best-practice.mdc  solana-mcp-guidline.mdc
programs/droog-game/: Anchor.toml  Cargo.toml
programs/droog-game/src/: errors.rs  lib.rs
programs/droog-game/src/instructions/: cancel_match.rs  finalize_match.rs  harvest.rs  harvest_strain.rs  init_delivery_state.rs  init_grow_state.rs  init_match.rs  join_match_stake.rs  mod.rs  plant_strain.rs  refresh_delivery_slots.rs  sell_to_customer.rs
programs/droog-game/src/state/: customer_state.rs  delivery_state.rs  grow_state.rs  match_state.rs  mod.rs  stake_state.rs
public/hq/: Fan.glb  cannabis.glb
scripts/: create-packs-mint.ts
server/: .env.example  Dockerfile  nixpacks.toml  package-lock.json  package.json  railway.toml  tsconfig.json
server/src/: index.ts
src/: buildingTracker.ts  main.tsx  scene.ts
src/components/: ActiveStrainsDisplay.tsx  AuthGate.tsx  CustomerAvailabilityDisplay.tsx  Dashboard.tsx  DeliveryConfirmationModal.tsx  DeliveryModalManager.tsx  ErrorBoundary.tsx  GameHints.tsx  GameToast.tsx  GrowSlotPlantingModal.tsx  GrowSlotPlantingModalManager.tsx  InventoryModal.tsx  (+15 more)
(+83 files in other folders)
