[package]
name = "droog-game"
version = "0.1.0"
description = "Competitive 1v1 grow/harvest game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "droog_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
