[package]
name = "droog-game"
version = "0.1.0"
description = "Competitive 1v1 grow/harvest game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "droog_game"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
solana-program = "=2.2.1"

[profile.release]
overflow-checks = true
